# real-time-defect-analysis

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: python-app.yml
demo/: README.md  unpack_video.py
docs/: adding-models.md  installation.md
notebooks/: align-images.ipynb  track-voids.ipynb
notebooks/files/: video34-Ni-600C-then-650C_defects.json
rtdefects/: analysis.py  cli.py  config.json  flask.py  function.py  io.py
rtdefects/segmentation/: __init__.py  pytorch.py  tf.py
rtdefects/segmentation/files/: README.md
rtdefects/static/: defect.js
rtdefects/templates/: home.html
tests/: test-image.tif  test_analysis.py  test_cli.py  test_function.py  test_io.py  test_segmentation.py
